[package]
name = "tally-demo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = {version = "0.23.0", features = ["axum"]}
axum = "0.4.8"
rustls = "0.20.4"
axum_database_sessions = {version = "0.2.3" }
tokio = {version = "1.17.0", features = ["full"]}
tower-cookies = "0.5.1"
serde = {version = "1.0.136", features = ["derive"]}
